Fix nav dropdown wrapping layout issue

--- a/index.css
+++ b/index.css
@@ -2292,7 +2292,7 @@ img, video, canvas, audio, iframe, embed, object {
 /* Dropdown CSS */
 .dropdown {
     position: relative;
-    display: flex;
+    display: inline-block;
 }
 
 .dropdown-content {
